--- a/notes.org
+++ b/notes.org
@@ -1056,6 +1056,9 @@ by considering interoperability of new features in accordance to it.
 Type system
 - [[https://v5.chriskrycho.com/journal/things-i-was-wrong-about/1-types/][Things I Was Wrong About: Types]]
 
+[[https://www.cs.utexas.edu/~EWD/transcriptions/EWD03xx/EWD340.html][The Humble Programmer by Edsger W. Dijkstra]]
+
+
 [[https://mitpress.mit.edu/sites/default/files/sicp/full-text/book/book-Z-H-10.html][1.1  The Elements of Programming]]
 > **Primitive expressions**, which represent the simplest entities the language is concerned with,
 >
