--- a/notes.org
+++ b/notes.org
@@ -1112,20 +1112,28 @@ Rust weaknesses:
 :EXPORT_OPTIONS: toc:2
 :END:
 
+
+My PGP public key is hosting on my own website:
+https://impl.dev/keys/aimeez.asc
+
 Keybase and Protonmail use their own ways to generate new keys.
-Users can import a private key from Protonmail to Keybase, and 
-Keybase will generate a new public key for it,
+Users can download a PGP private key from Protonmail
+and import it to Keybase.
+Keybase will generate a new public key from the private key,
 which means the user will have two public keys with the same
 private key.
 
-My requirement is to copy/paste the public key to Keybase, but not another 
-new public key.
+My requirement is to copy/paste the public key to Keybase, 
+but not another new public key.
 So this isn't what I need.
-
-My Keybase ID: https://keybase.io/aimeedeer
+I keep a Keybase ID though: https://keybase.io/aimeedeer
 
 References: 
 - [[https://book.keybase.io/docs/cli#basics][Keybase Book: Command Line]]
+- Protonmail: [[https://protonmail.com/blog/what-is-pgp-encryption/][What is PGP encryption and how does it work?]]
+- [[https://www.pitt.edu/~poole/PGP.htm][PGP 6.5.8 Pretty Good Privacy]].
+  Downloading, Installing, Setting Up, and Using this Encryption Software
+  A Tutorial for Beginners to PGP
 
 ** Game Theory       :blockchain:community:incentives:gametheory:@blockchain:
 :PROPERTIES:
