--- a/notes.org
+++ b/notes.org
@@ -440,6 +440,40 @@ You can find it here:
 #+end_src
 
 
+Change the ~bool~ Type to ~String~ in the code:
+
+#+begin_src rust
+    #[ink(storage)]
+    pub struct Aimeetest {
+        value: String,
+    }
+#+end_src
+
+And run the contract:
+
+#+begin_src shell
+$ cargo contract build && cargo contract generate-metadata
+ [1/3] Building cargo project
+   Compiling mytest v0.1.0 (/var/folders/g5/hf7q78jn0vngnqtqj_3qfm6r0000gn/T/cargo-contract_p9Kcuf)
+error[E0433]: failed to resolve: use of undeclared type `String`
+  --> /<mypath>/mytest/lib.rs:28:23
+   |
+28 |             Self::new(String::from("init!"))
+   |                       ^^^^^^ use of undeclared type `String`
+
+# the same errors in code
+# ...
+
+ Generating metadata
+ [1/3] Building cargo project
+   Compiling mytest v0.1.0 (/var/folders/g5/hf7q78jn0vngnqtqj_3qfm6r0000gn/T/cargo-contract_8b3R9m)
+error[E0433]: failed to resolve: use of undeclared type `String`
+  --> /<mypath>/mytest/lib.rs:28:23
+   |
+28 |             Self::new(String::from("init!"))
+   |                       ^^^^^^ use of undeclared type `String`
+#+end_src
+
 
 
 
